Atualizando meu Notebook para trabalhar Localmente

--- a/1_data_query_and_visualization/import_query_and_data_visualization.ipynb
+++ b/1_data_query_and_visualization/import_query_and_data_visualization.ipynb
@@ -52,7 +52,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔗 Carregado minhas credenciais do Databricks, com sucesso!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "\n",
+    "\n",
+    "_ = load_dotenv(find_dotenv())\n",
+    "\n",
+    "databricks_host = os.environ['DATABRICKS_HOST']\n",
+    "databricks_token = os.environ['DATABRICKS_TOKEN']\n",
+    "databricks_cluster_id = os.environ['DATABRICKS_CLUSTER_ID']\n",
+    "\n",
+    "print(\"🔗 Carregado minhas credenciais do Databricks, com sucesso!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Conectado ao Databricks com sucesso!\n",
+      "🔧 Versão Spark: 4.0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from databricks.connect import DatabricksSession # Esta classe é usada para conectar ao Databricks remotamente\n",
+    "\n",
+    "spark = DatabricksSession.builder.remote(host=databricks_host, token=databricks_token, cluster_id=databricks_cluster_id).getOrCreate()\n",
+    "\n",
+    "\n",
+    "print(\"✅ Conectado ao Databricks com sucesso!\")\n",
+    "print(f\"🔧 Versão Spark: {spark.version}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "databricks_cluster_id = spark.conf.get(\"spark.databricks.clusterUsageTags.clusterId\")\n",
+    "\n",
+    "print(f\"Databricks Cluster ID: {databricks_cluster_id}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -68,204 +130,12 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/plain": [
-       "Databricks visualization. Run in Databricks to view."
+       "DataFrame[tpep_pickup_datetime: timestamp, tpep_dropoff_datetime: timestamp, trip_distance: double, fare_amount: double, pickup_zip: int, dropoff_zip: int]"
       ]
      },
-     "metadata": {
-      "application/vnd.databricks.v1.subcommand+json": {
-       "baseErrorDetails": null,
-       "bindings": {},
-       "collapsed": false,
-       "command": "%python\n__backend_agg_display_orig = display\n__backend_agg_dfs = []\ndef __backend_agg_display_new(df):\n    __backend_agg_df_modules = [\"pandas.core.frame\", \"databricks.koalas.frame\", \"pyspark.sql.dataframe\", \"pyspark.pandas.frame\", \"pyspark.sql.connect.dataframe\"]\n    if (type(df).__module__ in __backend_agg_df_modules and type(df).__name__ == 'DataFrame') or isinstance(df, list):\n        __backend_agg_dfs.append(df)\n\ndisplay = __backend_agg_display_new\n\ndef __backend_agg_user_code_fn():\n    import base64\n    exec(base64.standard_b64decode(\"IyBDb25zdWx0YW1vcyBhIHNlZ3VpbnRlIFRhYmVsYToKZGlzcGxheShzcGFyay5yZWFkLnRhYmxlKCJzYW1wbGVzLm55Y3RheGkudHJpcHMiKSk=\").decode())\n\ntry:\n    # run user code\n    __backend_agg_user_code_fn()\n\n    #reset display function\n    display = __backend_agg_display_orig\n\n    if len(__backend_agg_dfs) > 0:\n        # create a temp view\n        if type(__backend_agg_dfs[0]).__module__ == \"databricks.koalas.frame\":\n            # koalas dataframe\n            __backend_agg_dfs[0].to_spark().createOrReplaceTempView(\"DatabricksView638c7ce\")\n        elif type(__backend_agg_dfs[0]).__module__ == \"pandas.core.frame\" or isinstance(__backend_agg_dfs[0], list):\n            # pandas dataframe\n            spark.createDataFrame(__backend_agg_dfs[0]).createOrReplaceTempView(\"DatabricksView638c7ce\")\n        else:\n            __backend_agg_dfs[0].createOrReplaceTempView(\"DatabricksView638c7ce\")\n        #run backend agg\n        display(spark.sql(\"\"\"WITH q AS (select * from DatabricksView638c7ce) SELECT `fare_amount`,AVG(`trip_distance`) `column_4c573bae39`,`pickup_zip` FROM q GROUP BY `fare_amount`,`pickup_zip`\"\"\"))\n    else:\n        displayHTML(\"dataframe no longer exists. If you're using dataframe.display(), use display(dataframe) instead.\")\n\n\nfinally:\n    spark.sql(\"drop view if exists DatabricksView638c7ce\")\n    display = __backend_agg_display_orig\n    del __backend_agg_display_new\n    del __backend_agg_display_orig\n    del __backend_agg_dfs\n    del __backend_agg_user_code_fn\n\n",
-       "commandTitle": "Visualization 1",
-       "commandType": "auto",
-       "commandVersion": 0,
-       "commentThread": [],
-       "commentsVisible": false,
-       "contentSha256Hex": null,
-       "customPlotOptions": {
-        "redashChart": [
-         {
-          "key": "type",
-          "value": "CHART"
-         },
-         {
-          "key": "options",
-          "value": {
-           "alignYAxesAtZero": true,
-           "coefficient": 1,
-           "columnConfigurationMap": {
-            "series": {
-             "column": "pickup_zip",
-             "id": "column_4c573bae37"
-            },
-            "x": {
-             "column": "fare_amount",
-             "id": "column_4c573bae34"
-            },
-            "y": [
-             {
-              "column": "trip_distance",
-              "id": "column_4c573bae39",
-              "transform": "AVG"
-             }
-            ]
-           },
-           "dateTimeFormat": "DD/MM/YYYY HH:mm",
-           "direction": {
-            "type": "counterclockwise"
-           },
-           "error_y": {
-            "type": "data",
-            "visible": true
-           },
-           "globalSeriesType": "column",
-           "isAggregationOn": true,
-           "legend": {
-            "traceorder": "normal"
-           },
-           "missingValuesAsZero": true,
-           "numberFormat": "0,0.[00000]",
-           "percentFormat": "0[.]00%",
-           "series": {
-            "error_y": {
-             "type": "data",
-             "visible": true
-            },
-            "percentValues": false,
-            "stacking": null
-           },
-           "seriesOptions": {
-            "column_4c573bae39": {
-             "type": "column",
-             "yAxis": 0
-            },
-            "trip_distance": {
-             "type": "column",
-             "yAxis": 0
-            }
-           },
-           "showDataLabels": false,
-           "sizemode": "diameter",
-           "sortX": true,
-           "sortY": true,
-           "swappedAxes": false,
-           "textFormat": "",
-           "useAggregationsUi": true,
-           "valuesOptions": {},
-           "version": 2,
-           "xAxis": {
-            "labels": {
-             "enabled": true
-            },
-            "type": "-"
-           },
-           "yAxis": [
-            {
-             "type": "-"
-            },
-            {
-             "opposite": true,
-             "type": "-"
-            }
-           ]
-          }
-         }
-        ]
-       },
-       "datasetPreviewNameToCmdIdMap": {},
-       "diffDeletes": [],
-       "diffInserts": [],
-       "displayType": "redashChart",
-       "error": null,
-       "errorDetails": null,
-       "errorSummary": null,
-       "errorTraceType": null,
-       "finishTime": 1758431053341,
-       "globalVars": {},
-       "guid": "",
-       "height": "auto",
-       "hideCommandCode": false,
-       "hideCommandResult": false,
-       "iPythonMetadata": null,
-       "inputWidgets": {},
-       "isLockedInExamMode": false,
-       "latestAssumeRoleInfo": null,
-       "latestUser": "a user",
-       "latestUserId": null,
-       "listResultMetadata": [
-        [
-         "table",
-         3261
-        ]
-       ],
-       "metadata": {
-        "byteLimit": 2048000,
-        "rowLimit": 10000
-       },
-       "nuid": "b4e73afb-a4e3-4445-bc59-8355b5142fa7",
-       "origId": 0,
-       "parentHierarchy": [],
-       "pivotAggregation": null,
-       "pivotColumns": null,
-       "position": 2.0,
-       "resultDbfsErrorMessage": null,
-       "resultDbfsStatus": "INLINED_IN_TREE",
-       "results": null,
-       "showCommandTitle": false,
-       "startTime": 1758431051042,
-       "state": "input",
-       "streamStates": {},
-       "subcommandOptions": {
-        "queryPlan": {
-         "groups": [
-          {
-           "column": "fare_amount",
-           "type": "column"
-          },
-          {
-           "column": "pickup_zip",
-           "type": "column"
-          }
-         ],
-         "selects": [
-          {
-           "column": "fare_amount",
-           "type": "column"
-          },
-          {
-           "alias": "column_4c573bae39",
-           "args": [
-            {
-             "column": "trip_distance",
-             "type": "column"
-            }
-           ],
-           "function": "AVG",
-           "type": "function"
-          },
-          {
-           "column": "pickup_zip",
-           "type": "column"
-          }
-         ]
-        }
-       },
-       "submitTime": 1758431051000,
-       "subtype": "tableResultSubCmd.visualization",
-       "tableResultIndex": 0,
-       "tableResultSettingsMap": {},
-       "useConsistentColors": false,
-       "version": "CommandV1",
-       "width": "auto",
-       "workflows": null,
-       "xColumns": null,
-       "yColumns": null
-      }
-     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -276,214 +146,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "064f1954-8cff-488b-b30e-01c6a10efbdb",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "Databricks visualization. Run in Databricks to view."
-      ]
-     },
-     "metadata": {
-      "application/vnd.databricks.v1.subcommand+json": {
-       "baseErrorDetails": null,
-       "bindings": {},
-       "collapsed": false,
-       "command": "%python\n__backend_agg_display_orig = display\n__backend_agg_dfs = []\ndef __backend_agg_display_new(df):\n    __backend_agg_df_modules = [\"pandas.core.frame\", \"databricks.koalas.frame\", \"pyspark.sql.dataframe\", \"pyspark.pandas.frame\", \"pyspark.sql.connect.dataframe\"]\n    if (type(df).__module__ in __backend_agg_df_modules and type(df).__name__ == 'DataFrame') or isinstance(df, list):\n        __backend_agg_dfs.append(df)\n\ndisplay = __backend_agg_display_new\n\ndef __backend_agg_user_code_fn():\n    import base64\n    exec(base64.standard_b64decode(\"IyBDb25zdWx0YW1vcyBhIHNlZ3VpbnRlIFRhYmVsYToKZGlzcGxheShzcGFyay5yZWFkLmNzdigiL1ZvbHVtZXMvd29ya3NwYWNlL2RlZmF1bHRfZWRkeS92b2x1bWVlZGR5LXRtcC1zYW1wbGVkYXRhL3NhbXBsZV9kYXRhLmNzdiIsIGhlYWRlcj1UcnVlLCBpbmZlclNjaGVtYT1UcnVlKSk=\").decode())\n\ntry:\n    # run user code\n    __backend_agg_user_code_fn()\n\n    #reset display function\n    display = __backend_agg_display_orig\n\n    if len(__backend_agg_dfs) > 0:\n        # create a temp view\n        if type(__backend_agg_dfs[0]).__module__ == \"databricks.koalas.frame\":\n            # koalas dataframe\n            __backend_agg_dfs[0].to_spark().createOrReplaceTempView(\"DatabricksViewb19cd91\")\n        elif type(__backend_agg_dfs[0]).__module__ == \"pandas.core.frame\" or isinstance(__backend_agg_dfs[0], list):\n            # pandas dataframe\n            spark.createDataFrame(__backend_agg_dfs[0]).createOrReplaceTempView(\"DatabricksViewb19cd91\")\n        else:\n            __backend_agg_dfs[0].createOrReplaceTempView(\"DatabricksViewb19cd91\")\n        #run backend agg\n        display(spark.sql(\"\"\"WITH q AS (select * from DatabricksViewb19cd91) SELECT `Name`,`City`,SUM(`Age`) `column_4c573bae60` FROM q GROUP BY `City`,`Name`\"\"\"))\n    else:\n        displayHTML(\"dataframe no longer exists. If you're using dataframe.display(), use display(dataframe) instead.\")\n\n\nfinally:\n    spark.sql(\"drop view if exists DatabricksViewb19cd91\")\n    display = __backend_agg_display_orig\n    del __backend_agg_display_new\n    del __backend_agg_display_orig\n    del __backend_agg_dfs\n    del __backend_agg_user_code_fn\n\n",
-       "commandTitle": "Visualization 1",
-       "commandType": "auto",
-       "commandVersion": 0,
-       "commentThread": [],
-       "commentsVisible": false,
-       "contentSha256Hex": null,
-       "customPlotOptions": {
-        "redashChart": [
-         {
-          "key": "type",
-          "value": "CHART"
-         },
-         {
-          "key": "options",
-          "value": {
-           "alignYAxesAtZero": true,
-           "coefficient": 1,
-           "columnConfigurationMap": {
-            "series": {
-             "column": "City",
-             "id": "column_4c573bae59"
-            },
-            "x": {
-             "column": "Name",
-             "id": "column_4c573bae58"
-            },
-            "y": [
-             {
-              "column": "Age",
-              "id": "column_4c573bae60",
-              "transform": "SUM"
-             }
-            ]
-           },
-           "dateTimeFormat": "DD/MM/YYYY HH:mm",
-           "direction": {
-            "type": "counterclockwise"
-           },
-           "error_y": {
-            "type": "data",
-            "visible": true
-           },
-           "globalSeriesType": "column",
-           "isAggregationOn": true,
-           "legend": {
-            "traceorder": "normal"
-           },
-           "missingValuesAsZero": true,
-           "numberFormat": "0,0.[00000]",
-           "percentFormat": "0[.]00%",
-           "series": {
-            "error_y": {
-             "type": "data",
-             "visible": true
-            },
-            "stacking": "stack"
-           },
-           "seriesOptions": {
-            "column_4c573bae60": {
-             "name": "Age",
-             "type": "column",
-             "yAxis": 0
-            }
-           },
-           "showDataLabels": false,
-           "sizemode": "diameter",
-           "sortX": true,
-           "sortY": true,
-           "swappedAxes": true,
-           "textFormat": "",
-           "useAggregationsUi": true,
-           "valuesOptions": {},
-           "version": 2,
-           "xAxis": {
-            "labels": {
-             "enabled": true
-            },
-            "type": "-"
-           },
-           "yAxis": [
-            {
-             "type": "-"
-            },
-            {
-             "opposite": true,
-             "type": "-"
-            }
-           ]
-          }
-         }
-        ]
-       },
-       "datasetPreviewNameToCmdIdMap": {},
-       "diffDeletes": [],
-       "diffInserts": [],
-       "displayType": "redashChart",
-       "error": null,
-       "errorDetails": null,
-       "errorSummary": null,
-       "errorTraceType": null,
-       "finishTime": 0,
-       "globalVars": {},
-       "guid": "",
-       "height": "auto",
-       "hideCommandCode": false,
-       "hideCommandResult": false,
-       "iPythonMetadata": null,
-       "inputWidgets": {},
-       "isLockedInExamMode": false,
-       "latestAssumeRoleInfo": null,
-       "latestUser": "a user",
-       "latestUserId": null,
-       "listResultMetadata": null,
-       "metadata": {},
-       "nuid": "db32668a-c132-4758-9fc4-1b5b200a402b",
-       "origId": 0,
-       "parentHierarchy": [],
-       "pivotAggregation": null,
-       "pivotColumns": null,
-       "position": 3.0,
-       "resultDbfsErrorMessage": null,
-       "resultDbfsStatus": "INLINED_IN_TREE",
-       "results": null,
-       "showCommandTitle": false,
-       "startTime": 0,
-       "state": "input",
-       "streamStates": {},
-       "subcommandOptions": {
-        "queryPlan": {
-         "groups": [
-          {
-           "column": "Name",
-           "type": "column"
-          },
-          {
-           "column": "City",
-           "type": "column"
-          }
-         ],
-         "selects": [
-          {
-           "column": "Name",
-           "type": "column"
-          },
-          {
-           "column": "City",
-           "type": "column"
-          },
-          {
-           "alias": "column_4c573bae60",
-           "args": [
-            {
-             "column": "Age",
-             "type": "column"
-            }
-           ],
-           "function": "SUM",
-           "type": "function"
-          }
-         ]
-        }
-       },
-       "submitTime": 0,
-       "subtype": "tableResultSubCmd.visualization",
-       "tableResultIndex": 0,
-       "tableResultSettingsMap": {},
-       "useConsistentColors": false,
-       "version": "CommandV1",
-       "width": "auto",
-       "workflows": null,
-       "xColumns": null,
-       "yColumns": null
-      }
-     },
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 📋 VISUALIZAR DADOS DA TABELA - Substituto para display()\n",
+    "\n",
+    "# Carregar a tabela\n",
+    "taxi_df = spark.read.table(\"samples.nyctaxi.trips\")\n",
+    "\n",
+    "# Exibir informações básicas da tabela\n",
+    "print(\"🚕 === DADOS DA TABELA NYC TAXI TRIPS ===\")\n",
+    "print(f\"📊 Total de registros: {taxi_df.count():,}\")\n",
+    "print(f\"📋 Total de colunas: {len(taxi_df.columns)}\")\n",
+    "print(f\"🏷️ Colunas: {', '.join(taxi_df.columns)}\")\n",
+    "\n",
+    "print(\"\\n📋 ESTRUTURA DA TABELA:\")\n",
+    "taxi_df.printSchema()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 📊 EXIBIR OS DADOS - Equivalente ao display()\n",
+    "\n",
+    "print(\"🔍 === PRIMEIRAS 20 LINHAS DA TABELA ===\")\n",
+    "# Usar .show() para exibir dados (substituto direto do display)\n",
+    "taxi_df.show(20, truncate=False)\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"📈 ESTATÍSTICAS RÁPIDAS:\")\n",
+    "# Estatísticas básicas de colunas numéricas\n",
+    "taxi_df.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Consultamos a seguinte Tabela:\n",
-    "display(spark.read.csv(\"/Volumes/workspace/default_eddy/volumeeddy-tmp-sampledata/sample_data.csv\", header=True, inferSchema=True))"
+    "display(spark.read.csv(\"/Volumes/workspace/default_eddy/volumeeddy-tmp-sampledata/sample_data.csv\", header=True, inferSchema=True))\n"
    ]
   }
  ],
@@ -503,8 +210,22 @@
    "notebookName": "import_query_and_data_visualization",
    "widgets": {}
   },
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
