--- a/1_data_query_and_visualization/import_query_and_data_visualization.ipynb
+++ b/1_data_query_and_visualization/import_query_and_data_visualization.ipynb
@@ -110,14 +110,17 @@
    },
    "outputs": [],
    "source": [
-    "# Só executar quando estiver trabalhando localmente:\n",
     "from databricks.connect import DatabricksSession # Esta classe é usada para conectar ao Databricks remotamente\n",
+    "from pyspark.dbutils import DBUtils # Para usar dbutils localmente\n",
     "\n",
     "spark = DatabricksSession.builder.remote(host=databricks_host, token=databricks_token, cluster_id=databricks_cluster_id).getOrCreate()\n",
     "\n",
+    "# Criar instância do DBUtils para usar dbutils localmente:\n",
+    "dbutils = DBUtils(spark)\n",
     "\n",
     "print(\"✅ Conectado ao Databricks com sucesso!\")\n",
-    "print(f\"🔧 Versão Spark: {spark.version}\")"
+    "print(f\"🔧 Versão Spark: {spark.version}\")\n",
+    "print(f\"📦 DBUtils configurado e pronto para uso!\")"
    ]
   },
   {
@@ -161,7 +164,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/plain": [
        "Databricks visualization. Run in Databricks to view."
@@ -294,7 +296,7 @@
        "parentHierarchy": [],
        "pivotAggregation": null,
        "pivotColumns": null,
-       "position": 9.0,
+       "position": 9,
        "resultDbfsErrorMessage": null,
        "resultDbfsStatus": "INLINED_IN_TREE",
        "results": null,
@@ -444,7 +446,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/plain": [
        "Databricks visualization. Run in Databricks to view."
@@ -575,7 +576,7 @@
        "parentHierarchy": [],
        "pivotAggregation": null,
        "pivotColumns": null,
-       "position": 12.0,
+       "position": 12,
        "resultDbfsErrorMessage": null,
        "resultDbfsStatus": "INLINED_IN_TREE",
        "results": null,
@@ -758,7 +759,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/plain": [
        "Databricks visualization. Run in Databricks to view."
@@ -891,7 +891,7 @@
        "parentHierarchy": [],
        "pivotAggregation": null,
        "pivotColumns": null,
-       "position": 15.0,
+       "position": 15,
        "resultDbfsErrorMessage": null,
        "resultDbfsStatus": "INLINED_IN_TREE",
        "results": null,
@@ -976,7 +976,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/plain": [
        "Databricks visualization. Run in Databricks to view."
@@ -1044,7 +1043,7 @@
        "parentHierarchy": [],
        "pivotAggregation": null,
        "pivotColumns": null,
-       "position": 16.0,
+       "position": 16,
        "resultDbfsErrorMessage": null,
        "resultDbfsStatus": "INLINED_IN_TREE",
        "results": null,
