Aplicando REGRAS DE NEGÓCIO com spark.sql

--- a/2_medallion_architecture_and_env_in_databricks/medallion_env_databricks.ipynb
+++ b/2_medallion_architecture_and_env_in_databricks/medallion_env_databricks.ipynb
@@ -316,15 +316,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-19 12:40:16,034 - __main__ - INFO - 🏆 TABELAS NO SCHEMA 'eddy_uber_taxi_v1.bronze'\n",
-      "2025-10-19 12:40:17,038 - __main__ - INFO -   database tableName  isTemporary\n",
+      "2025-10-19 17:01:09,872 - __main__ - INFO - 🏆 TABELAS NO SCHEMA 'eddy_uber_taxi_v1.bronze'\n",
+      "2025-10-19 17:01:10,710 - __main__ - INFO -   database tableName  isTemporary\n",
       "0   bronze  uber_raw        False\n",
-      "2025-10-19 12:40:17,042 - __main__ - INFO - \n",
+      "2025-10-19 17:01:10,712 - __main__ - INFO - \n",
       "📊 Total de tabelas: 1\n",
-      "2025-10-19 12:40:17,042 - __main__ - INFO - 🏆 TABELAS NO SCHEMA 'eddy_uber_taxi_v1.silver'\n",
-      "2025-10-19 12:40:18,087 - __main__ - WARNING - ⚠️ Nenhuma tabela encontrada\n",
-      "2025-10-19 12:40:18,089 - __main__ - INFO - 🏆 TABELAS NO SCHEMA 'eddy_uber_taxi_v1.gold'\n",
-      "2025-10-19 12:40:19,022 - __main__ - WARNING - ⚠️ Nenhuma tabela encontrada\n"
+      "2025-10-19 17:01:10,713 - __main__ - INFO - 🏆 TABELAS NO SCHEMA 'eddy_uber_taxi_v1.silver'\n",
+      "2025-10-19 17:01:11,513 - __main__ - INFO -   database              tableName  isTemporary\n",
+      "0   silver  uber_col_ptbr_silver1        False\n",
+      "2025-10-19 17:01:11,516 - __main__ - INFO - \n",
+      "📊 Total de tabelas: 1\n",
+      "2025-10-19 17:01:11,517 - __main__ - INFO - 🏆 TABELAS NO SCHEMA 'eddy_uber_taxi_v1.gold'\n",
+      "2025-10-19 17:01:12,413 - __main__ - WARNING - ⚠️ Nenhuma tabela encontrada\n"
      ]
     }
    ],
@@ -364,7 +367,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-19 12:43:08,555 - __main__ - INFO - O shape da tabela bronze é: 200000 linhas e 9 colunas\n"
+      "2025-10-19 17:01:15,311 - __main__ - INFO - O shape da tabela bronze é: 200000 linhas e 9 colunas\n"
      ]
     }
    ],
@@ -388,7 +391,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-19 12:43:24,428 - __main__ - INFO - O schema da tabela bronze é:\n",
+      "2025-10-19 17:01:15,320 - __main__ - INFO - O schema da tabela bronze é:\n",
       "\n"
      ]
     },
@@ -426,7 +429,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-19 12:43:39,942 - __main__ - INFO - 👀 Preview dos dados (6 primeiras linhas):\n",
+      "2025-10-19 17:01:15,342 - __main__ - INFO - 👀 Preview dos dados (6 primeiras linhas):\n",
       "\n"
      ]
     },
@@ -491,9 +494,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-19 12:59:12,951 - __main__ - INFO - 📊 Colunas antigas: ['_c0', 'key', 'fare_amount', 'pickup_datetime', 'pickup_longitude', 'pickup_latitude', 'dropoff_longitude', 'dropoff_latitude', 'passenger_count']\n",
-      "2025-10-19 12:59:14,502 - __main__ - INFO - 📊 Colunas novas:  ['id', 'chave_temporal', 'valor_corrida', 'data_hora_embarque', 'longitude_embarque', 'latitude_embarque', 'longitude_desembarque', 'latitude_desembarque', 'numero_passageiros']\n",
-      "2025-10-19 12:59:14,503 - __main__ - INFO - \n",
+      "2025-10-19 17:01:18,151 - __main__ - INFO - 📊 Colunas antigas: ['_c0', 'key', 'fare_amount', 'pickup_datetime', 'pickup_longitude', 'pickup_latitude', 'dropoff_longitude', 'dropoff_latitude', 'passenger_count']\n",
+      "2025-10-19 17:01:18,551 - __main__ - INFO - 📊 Colunas novas:  ['id', 'chave_temporal', 'valor_corrida', 'data_hora_embarque', 'longitude_embarque', 'latitude_embarque', 'longitude_desembarque', 'latitude_desembarque', 'numero_passageiros']\n",
+      "2025-10-19 17:01:18,552 - __main__ - INFO - \n",
       "👀 Preview dos dados:\n"
      ]
     },
@@ -554,11 +557,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-19 13:11:57,353 - __main__ - INFO - 💾 Iniciando salvamento no Silver: eddy_uber_taxi_v1.silver.uber_col_ptbr_silver1\n",
-      "2025-10-19 13:11:58,818 - __main__ - INFO - 📊 Total de registros: 200,000\n",
-      "2025-10-19 13:11:58,819 - __main__ - INFO - 📋 Total de colunas: 9\n",
-      "2025-10-19 13:12:04,630 - __main__ - INFO - ✅ Tabela eddy_uber_taxi_v1.silver.uber_col_ptbr_silver1 salva com sucesso!\n",
-      "2025-10-19 13:12:04,632 - __main__ - INFO - 🔍 Verificando tabela criada:\n"
+      "2025-10-19 17:01:20,209 - __main__ - INFO - 💾 Iniciando salvamento no Silver: eddy_uber_taxi_v1.silver.uber_col_ptbr_silver1\n",
+      "2025-10-19 17:01:20,575 - __main__ - INFO - 📊 Total de registros: 200,000\n",
+      "2025-10-19 17:01:20,576 - __main__ - INFO - 📋 Total de colunas: 9\n",
+      "2025-10-19 17:01:25,093 - __main__ - INFO - ✅ Tabela eddy_uber_taxi_v1.silver.uber_col_ptbr_silver1 salva com sucesso!\n",
+      "2025-10-19 17:01:25,094 - __main__ - INFO - 🔍 Verificando tabela criada:\n"
      ]
     },
     {
@@ -586,7 +589,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-19 13:12:05,883 - __main__ - INFO - 📊 Total de registros salvos: 200,000\n"
+      "2025-10-19 17:01:26,368 - __main__ - INFO - 📊 Total de registros salvos: 200,000\n"
      ]
     }
    ],
@@ -629,6 +632,86 @@
     "    logger.error(f\"❌ Erro ao salvar no Silver: {str(e)}\")\n",
     "    raise\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d981e5e",
+   "metadata": {},
+   "source": [
+    "# <font color=\"red\">Aplicando algumas ``Regras de Negócio``</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04ab92aa",
+   "metadata": {},
+   "source": [
+    "## <font color=\"blue\">📊 REGRA DE NEGÓCIO 1: Validação e Limpeza Básica</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "615641ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-19 17:06:01,945 - __main__ - INFO - 🔍 Aplicando Regra de Negócio 1: Validação Básica\n",
+      "2025-10-19 17:06:04,000 - __main__ - INFO - ✅ Registros válidos: 175,146\n"
+     ]
+    }
+   ],
+   "source": [
+    "logger.info(\"🔍 Aplicando Regra de Negócio 1: Validação Básica\")\n",
+    "\n",
+    "# Usar nomes ORIGINAIS da tabela Bronze\n",
+    "df_silver_valido = spark.sql(f\"\"\"\n",
+    "    SELECT \n",
+    "        _c0 AS id,\n",
+    "        key AS chave_temporal,\n",
+    "        fare_amount AS valor_corrida,\n",
+    "        pickup_datetime AS data_hora_embarque,\n",
+    "        pickup_longitude AS longitude_embarque,\n",
+    "        pickup_latitude AS latitude_embarque,\n",
+    "        dropoff_longitude AS longitude_desembarque,\n",
+    "        dropoff_latitude AS latitude_desembarque,\n",
+    "        passenger_count AS numero_passageiros,\n",
+    "        CURRENT_TIMESTAMP() AS data_processamento\n",
+    "    FROM {catalog_name}.bronze.uber_raw\n",
+    "    WHERE \n",
+    "        -- Usar nomes ORIGINAIS nas condições\n",
+    "        fare_amount > 0 \n",
+    "        AND fare_amount < 500\n",
+    "        \n",
+    "        AND passenger_count > 0 \n",
+    "        AND passenger_count <= 4\n",
+    "        \n",
+    "        AND pickup_longitude BETWEEN -74.05 AND -73.75\n",
+    "        AND pickup_latitude BETWEEN 40.63 AND 40.85\n",
+    "        AND dropoff_longitude BETWEEN -74.05 AND -73.75\n",
+    "        AND dropoff_latitude BETWEEN 40.63 AND 40.85\n",
+    "        \n",
+    "        AND pickup_datetime <= CURRENT_TIMESTAMP()\n",
+    "\"\"\")\n",
+    "\n",
+    "logger.info(f\"✅ Registros válidos: {df_silver_valido.count():,}\")\n",
+    "\n",
+    "# Salvar no Silver\n",
+    "df_silver_valido.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\n",
+    "    f\"{catalog_name}.silver.uber_valido\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1ec1a19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
