Mais um exemplo de REGRA DE NEGÓCIO

--- a/2_medallion_architecture_and_env_in_databricks/medallion_env_databricks.ipynb
+++ b/2_medallion_architecture_and_env_in_databricks/medallion_env_databricks.ipynb
@@ -706,12 +706,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77b66678",
+   "metadata": {},
+   "source": [
+    "## <font color=\"blue\">📊 REGRA DE NEGÓCIO 2: Deduplicação e Padronização</font>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b1ec1a19",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-19 18:10:38,634 - __main__ - INFO - 🔍 Aplicando Regra de Negócio 2: Deduplicação\n",
+      "2025-10-19 18:10:40,960 - __main__ - INFO - ✅ Unique records: 199,269\n",
+      "2025-10-19 18:10:47,456 - __main__ - INFO - ✅ Table eddy_uber_taxi_v1.silver.uber_unique saved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "logger.info(\"🔍 Aplicando Regra de Negócio 2: Deduplicação\")\n",
+    "\n",
+    "tb_silver_unico = spark.sql(f\"\"\"\n",
+    "    WITH ranked_data AS (\n",
+    "        SELECT \n",
+    "            *,\n",
+    "            ROW_NUMBER() OVER (\n",
+    "                PARTITION BY _c0 \n",
+    "                ORDER BY pickup_datetime DESC\n",
+    "            ) AS rank_temporal\n",
+    "        FROM {catalog_name}.bronze.uber_raw\n",
+    "        WHERE \n",
+    "            fare_amount > 0 \n",
+    "            AND passenger_count > 0\n",
+    "    )\n",
+    "    SELECT \n",
+    "        _c0,\n",
+    "        key,\n",
+    "        ROUND(fare_amount, 2) AS fare_amount,\n",
+    "        pickup_datetime,\n",
+    "        DATE_FORMAT(pickup_datetime, 'dd/MM/yyyy HH:mm:ss') AS pickup_datetime_formatted,\n",
+    "        ROUND(pickup_longitude, 4) AS pickup_longitude,\n",
+    "        ROUND(pickup_latitude, 4) AS pickup_latitude,\n",
+    "        ROUND(dropoff_longitude, 4) AS dropoff_longitude,\n",
+    "        ROUND(dropoff_latitude, 4) AS dropoff_latitude,\n",
+    "        passenger_count,\n",
+    "        CURRENT_TIMESTAMP() AS processing_timestamp\n",
+    "    FROM ranked_data\n",
+    "    WHERE rank_temporal = 1\n",
+    "\"\"\")\n",
+    "\n",
+    "logger.info(f\"✅ Unique records: {tb_silver_unico.count():,}\")\n",
+    "\n",
+    "# Save to Silver\n",
+    "tb_silver_unico.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\n",
+    "    f\"{catalog_name}.silver.uber_unique_id_deduplicated\"\n",
+    ")\n",
+    "\n",
+    "logger.info(f\"✅ Table {catalog_name}.silver.uber_unique saved successfully!\")"
+   ]
   }
  ],
  "metadata": {
