Enviando ao meu REPO

--- a/3_Implementation_of_Multiple_LinearRegression/multiple_linear_regression.ipynb
+++ b/3_Implementation_of_Multiple_LinearRegression/multiple_linear_regression.ipynb
@@ -275,7 +275,7 @@
    "source": [
     "file_location = \"/Volumes/cat_multiple_linear_regression/schema_ml_mult_regression/vol_ml_regression_csv\"\n",
     "\n",
-    "# The applied options are for CSV files. For other file types, these will be ignored.\n",
+    "# As opções aplicadas são para arquivos CSV. Para outros tipos de arquivos, elas serão ignoradas:\n",
     "df =spark.read.csv(file_location, header=True, inferSchema=True)\n",
     "#df.show()\n",
     "display(df)"
