Análise Estatística do meu dataset

--- a/3_Implementation_of_Multiple_LinearRegression/multiple_linear_regression.ipynb
+++ b/3_Implementation_of_Multiple_LinearRegression/multiple_linear_regression.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -203,7 +203,7 @@
     "file_location = \"/Volumes/cat_multiple_linear_regression/schema_ml_mult_regression/vol_ml_regression_csv\"\n",
     "\n",
     "# As opções aplicadas são para arquivos CSV. Para outros tipos de arquivos, elas serão ignoradas:\n",
-    "df =spark.read.csv(file_location, header=True, inferSchema=True)\n",
+    "df = spark.read.csv(file_location, header=True, inferSchema=True)\n",
     "\n",
     "df.show(10)\n",
     "#display(df)"
@@ -262,19 +262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "============================================================\n",
-      "📌 DIMENSÕES DO DATASET\n",
-      "============================================================\n",
       "Número de registros: 244\n",
       "Número de colunas: 7\n",
-      "Colunas: ['total_bill', 'tip', 'sex', 'smoker', 'day', 'time', 'size']\n"
+      "Colunas: ['total_bill', 'tip', 'sex', 'smoker', 'day', 'time', 'size']\n",
+      "O shape do Dataset é: (244, 7)\n"
      ]
     }
    ],
@@ -282,50 +280,121 @@
     "# 1. Dimensões do Dataset:\n",
     "print(f\"Número de registros: {df.count()}\")\n",
     "print(f\"Número de colunas: {len(df.columns)}\")\n",
-    "print(f\"Colunas: {df.columns}\")\n"
+    "print(f\"Colunas: {df.columns}\")\n",
+    "print(f\"O shape do Dataset é: {df.count(), len(df.columns)}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 ESTATÍSTICAS DESCRITIVAS\n",
+      "+-------+------------------+------------------+------+------+----+------+------------------+\n",
+      "|summary|        total_bill|               tip|   sex|smoker| day|  time|              size|\n",
+      "+-------+------------------+------------------+------+------+----+------+------------------+\n",
+      "|  count|               244|               244|   244|   244| 244|   244|               244|\n",
+      "|   mean|19.785942622950824|2.9982786885245902|  NULL|  NULL|NULL|  NULL| 2.569672131147541|\n",
+      "| stddev| 8.902411954856856|1.3836381890011826|  NULL|  NULL|NULL|  NULL|0.9510998047322332|\n",
+      "|    min|              3.07|               1.0|Female|    No| Fri|Dinner|                 1|\n",
+      "|    max|             50.81|              10.0|  Male|   Yes|Thur| Lunch|                 6|\n",
+      "+-------+------------------+------------------+------+------+----+------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Estatísticas Descritivas das Variáveis Numéricas\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
+    "# 2. Estatísticas Descritivas das Variáveis Numéricas:\n",
     "print(\"📊 ESTATÍSTICAS DESCRITIVAS\")\n",
-    "print(\"=\" * 60)\n",
+    "\n",
     "df.describe().show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏷️  VARIÁVEIS CATEGÓRICAS\n",
+      "\n",
+      "📍 Distribuição por SEXO:\n",
+      "+------+-----+\n",
+      "|   sex|count|\n",
+      "+------+-----+\n",
+      "|  Male|  157|\n",
+      "|Female|   87|\n",
+      "+------+-----+\n",
+      "\n",
+      "📍 Distribuição por FUMANTE:\n",
+      "+------+-----+\n",
+      "|smoker|count|\n",
+      "+------+-----+\n",
+      "|    No|  151|\n",
+      "|   Yes|   93|\n",
+      "+------+-----+\n",
+      "\n",
+      "📍 Distribuição por DIA DA SEMANA:\n",
+      "+----+-----+\n",
+      "| day|count|\n",
+      "+----+-----+\n",
+      "| Sat|   87|\n",
+      "| Sun|   76|\n",
+      "|Thur|   62|\n",
+      "| Fri|   19|\n",
+      "+----+-----+\n",
+      "\n",
+      "📍 Distribuição por PERÍODO:\n",
+      "+------+-----+\n",
+      "|  time|count|\n",
+      "+------+-----+\n",
+      "|Dinner|  176|\n",
+      "| Lunch|   68|\n",
+      "+------+-----+\n",
+      "\n",
+      "📍 Distribuição por TAMANHO DO GRUPO:\n",
+      "+----+-----+\n",
+      "|size|count|\n",
+      "+----+-----+\n",
+      "|   1|    4|\n",
+      "|   2|  156|\n",
+      "|   3|   38|\n",
+      "|   4|   37|\n",
+      "|   5|    5|\n",
+      "|   6|    4|\n",
+      "+----+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Análise das Variáveis Categóricas\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
+    "# 3. Análise das Variáveis Categóricas:\n",
     "print(\"🏷️  VARIÁVEIS CATEGÓRICAS\")\n",
-    "print(\"=\" * 60)\n",
     "\n",
-    "# Sexo\n",
+    "# Sexo:\n",
     "print(\"\\n📍 Distribuição por SEXO:\")\n",
     "df.groupBy(\"sex\").count().orderBy(\"count\", ascending=False).show()\n",
     "\n",
-    "# Fumante\n",
+    "# Fumante:\n",
     "print(\"📍 Distribuição por FUMANTE:\")\n",
     "df.groupBy(\"smoker\").count().orderBy(\"count\", ascending=False).show()\n",
     "\n",
-    "# Dia da semana\n",
+    "# Dia da semana:\n",
     "print(\"📍 Distribuição por DIA DA SEMANA:\")\n",
     "df.groupBy(\"day\").count().orderBy(\"count\", ascending=False).show()\n",
     "\n",
-    "# Período (Lunch/Dinner)\n",
+    "# Período (Lunch/Dinner):\n",
     "print(\"📍 Distribuição por PERÍODO:\")\n",
     "df.groupBy(\"time\").count().orderBy(\"count\", ascending=False).show()\n",
     "\n",
-    "# Tamanho do grupo\n",
+    "# Tamanho do grupo:\n",
     "print(\"📍 Distribuição por TAMANHO DO GRUPO:\")\n",
     "df.groupBy(\"size\").count().orderBy(\"size\").show()\n"
    ]
